# startet-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_PERMISSIONS.md  README.md  STRUCTURE_OPTIONS.md  init_template.py  justfile  pyproject.toml
.claude/: README.md  config.json
scripts/: README.md
src/: README.md
src/template_package/: __init__.py
tests/: README.md
